# llm-cli

./: .env.example  .gitignore  README.md  makefile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/llm_cli/: env.py
src/llm_cli/clients/: __init__.py  _base.py  _config.py  _models.py
src/llm_cli/clients/_fakes/: broken.py  echo.py
src/llm_cli/clients/_vendors/: anthropic.py  deepseek.py  meta.py  mistral.py  openai.py  xai.py
src/llm_cli/commands/: conversation.py  question.py
src/llm_cli/commands/_utils/: parsing.py  printing.py
src/llm_cli/domain/llm_client/: __init__.py  _anthropic.py  _base.py  _broken.py  _claude.py  _config.py  _echo.py  _models.py  _xai.py
src/llm_cli/domain/llm_client/_vendors/: xai.py
testing/: factories.py
tests/functional/commands/: test_question.py
tests/integration/commands/: test_conversation.py  test_question.py
tests/unit/clients/: test_base.py  test_config.py
tests/unit/clients/_fakes/: test_broken.py  test_echo.py
tests/unit/clients/_vendors/: _test_mistral.py  test_anthropic.py  test_mistral.py
tests/unit/commands/: test_question.py
tests/unit/commands/_utils/: test_parsing.py  test_printing.py
tests/unit/domain/llm_client/: test_anthropic.py  test_broken.py  test_config.py  test_echo.py
tests/unit/domain/llm_client/_fakes/: test_broken.py  test_echo.py
tests/unit/domain/llm_client/_vendors/: test_anthropic.py
