[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "llm_cli"
version = "0"
requires-python = ">= 3.11"

# ----------
# Dependencies
# ----------

dependencies = [
    "anthropic",
    "mistralai",
    "openai",
    "python-decouple",
    # Dev.
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "ruff",
]

[project.scripts]
question = "llm_cli.commands.question:main"
q = "llm_cli.commands.question:main"

conversation = "llm_cli.commands.conversation:main"
convo = "llm_cli.commands.conversation:main"

# ----------
# Tooling
# ----------

[tool.pytest.ini_options]
pythonpath = "./src"

[tool.mypy]
ignore_missing_imports = true
exclude = ["venv", "build"]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true


[tool.ruff]

line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]

select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
]

ignore = [
    "E501", # Line too long
]

[tool.ruff.lint.isort]
# Sections
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["llm_cli", "tests"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"*__init__.py" = ["F401"]  # Allow convenience imports in __init__.py files.
